ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-battle-ingress
spec:
  rules:
    - host: frontend.product-battle
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
    - host: broker.product-battle
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: broker
                port:
                  number: 8081
